--- a/templates/index.html
+++ b/templates/index.html
@@ -60,9 +60,19 @@
                         </div>
                     </div>
 
-                    <div class="text-center">
-                        <a href="/" class="btn btn-outline-primary w-100">♻️ 刷新页面</a>
-                        <p class="mt-3 text-muted small">部署于阿里云 ECS • Powered by Flask</p>
+                    <div class="d-grid gap-2">
+                        <a href="/" class="btn btn-outline-primary">
+                            ♻️ 刷新页面
+                        </a>
+                        
+                        <a href="https://github.com/Fight4self/-pj" target="_blank" class="btn btn-dark">
+                            <img src="https://github.githubassets.com/favicons/favicon-dark.png" width="20" height="20" style="vertical-align: text-bottom; margin-right: 5px;">
+                            View on GitHub (查看源码)
+                        </a>
+                    </div>
+                    
+                    <div class="text-center mt-3">
+                        <p class="text-muted small">部署于阿里云 ECS • Powered by Flask</p>
                     </div>
                 </div>
             </div>
